<resources>
    <string name="app_name">OfoModel</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hint_please_input_user_name">请输入用户名</string>
    <string name="text_user_name">账号</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="hint_please_input_password_again">请再次输入密码</string>
    <string name="text_password">密码</string>
    <string name="text_password_again">确认密码</string>
    <string name="button_register">注册</string>
    <string name="btn_signin">登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_save">保存</string>
    <string name="label_register">注册</string>
    <string name="label_rent">物品出租</string>


    <string name="text_arrow_down">\ue64b</string>
    <string name="text_arrow_up">\ue64a</string>
    <string name="text_arrow_right">\ue64c</string>
    <string name="text_arrow_left">\ue64d</string>
    <string name="label_man">男</string>
    <string name="label_woman">女</string>
    <string name="label_title_swap">物品交换</string>

    <string name="view_omit_style_content">%1$d人参与</string>

    <string-array name="priceFormat">
        <item><Data><![CDATA[<font color="#ff0000"><big>%1$s</big></font>&nbsp;元/小时]]></Data></item>
        <item><Data><![CDATA[<font color="#ff0000"><big>%1$s</big></font>&nbsp;元/天]]></Data></item>
        <item><Data><![CDATA[<font color="#ff0000"><big>%1$s</big></font>&nbsp;元/月]]></Data></item>
    </string-array>

    <string name="depositFormat">
        <Data><![CDATA[<font color="#ff0000"><big>%1$s</big></font>&nbsp;元]]></Data>
    </string>


</resources>
