<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.zhuangbudong.ofo.activity.RegisterActivity">


    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/text_user_name"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_user_name"
        android:layout_toRightOf="@id/tv_user_name"
        android:hint="@string/hint_please_input_user_name"
        android:inputType="text"/>


    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_user_name"
        android:layout_marginTop="5dp"
        android:text="@string/text_password"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_password"
        android:layout_toRightOf="@id/tv_password"
        android:hint="@string/hint_please_input_password"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/tv_password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password"
        android:layout_marginTop="5dp"
        android:text="@string/text_password_again"/>

    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_password_again"
        android:layout_toRightOf="@id/tv_password_again"
        android:hint="@string/hint_please_input_password_again"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password_again"
        android:text="@string/button_register"/>
</RelativeLayout>
