<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.zhuangbudong.ofo.activity.SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        android:text="先去看看"
        android:textColor="@color/color_aeaeae" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/share" />

    <ImageView
        android:id="@+id/user_head"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/rl_container_sign"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:src="@mipmap/ad4" />


    <RelativeLayout
        android:id="@+id/rl_container_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingBottom="10dp"
            android:text="@string/text_user_name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_user_name"
            android:layout_toRightOf="@+id/tv_user_name"
            android:background="@null"
            android:hint="@string/hint_please_input_user_name"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:text="123"
            android:textSize="14sp" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/tv_user_name"
            android:background="@color/item_line_color" />


        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:paddingBottom="10dp"
            android:paddingTop="8dp"
            android:text="@string/text_password"
            android:textSize="15sp"

            />

        <com.zhuangbudong.ofo.widget.XEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_password"
            android:layout_toRightOf="@+id/tv_password"
            android:background="@null"
            android:hint="@string/hint_please_input_password"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="123"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/tv_password"
            android:background="@color/item_line_color" />


        <RelativeLayout
            android:id="@+id/rl_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:paddingTop="48dp">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/view"
                android:background="@drawable/bg_resigter"
                android:text="@string/button_register"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:id="@+id/view"
                android:layout_width="10dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btn_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/btn_register"
                android:layout_toRightOf="@+id/view"
                android:background="@drawable/bg_login"
                android:text="@string/btn_signin"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
